<resources>
    <string name="app_name">FlagCap</string>

    <string name="welcome_message">Hello world!</string>
    <string name="activity_c_title">AktivitetC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_count">Start counter</string>
    <string name="action_gamemenu">Switch to the game menu</string>
    <string name="action_location">Start location tracker</string>

    <!-- The Counter -->
    <string name="count_activity_title">The amazing counter</string>
    <string name="theCount">0</string>
    <string name="counter_button_inc">+</string>
    <string name="counter_button_dec">-</string>

    <!-- Location Tracker -->
    <string name="location_tracker_title">The impressing location detector</string>
    <string name="location_message">Your current position is: </string>
    <string name="location_latitude">Latitude: </string>
    <string name="location_latitude_value">000000000</string>
    <string name="location_longitude">Longitude: </string>
    <string name="location_longitude_value">000000000</string>
    <string name="location_altitude">Altitude: </string>
    <string name="location_altitude_value">000000000</string>
    <string name="location_water_pretext">Is your location in water? </string>
    <string name="location_water_value">Unknown</string>
    <string name="location_default_update_pretext">Last updated: </string>
    <string name="location_time_updated">Never</string>

    <!-- Start Menu -->
    <string name="startmenu_title">FlagCap</string>
    <string name="startmenu_new_button">New Game</string>
    <string name="startmenu_continue_button">Continue Game</string>
    <string name="startmenu_highscorebutton">Highscore</string>
    <string name="startmenu_optionsbutton">Options</string>
    <string name="startmenu_exitbutton">Exit Game</string>

    <!-- The Game -->
    <string name="game_title">FlagCap</string>
    <string name="game_point_pretext">Points:</string>
    <string name="game_current_points">0</string>
    <string name="game_user_pretext">Nickname:</string>
    <string name="game_current_user">CL4P-TP</string>

    <!-- Error Messages -->
    <string name="service_not_available">Sorry, the service is not available.</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude.</string>
    <string name="no_address_found">No address found.</string>
    <string name="address_found">Found an address</string>

    <string name="buttonChangeText">Change text</string>
    <string name="buttonToB">Go to B</string>
    <string name="edit_text">EditText</string>
    <string name="text_view">TextView</string>
    <string name="mainactivityb_title">MainActivityB</string>
    <string name="player_name">Your nickname</string>
    <string name="title_activity_maps">Map</string>
</resources>
