<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CounterActivity"
    android:id="@+id/count_activity">

    <TextView
        android:id="@+id/counterTextView"
        android:text="Counter"
        android:textSize="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
    />

    <TextView
        android:id="@+id/count_display"
        android:text="@string/theCount"
        android:textSize="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
    />

    <Button
        android:id="@+id/decButton"
        android:text="@string/counter_button_dec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/count_display"
        android:layout_centerHorizontal="true"
    />

    <Button
        android:id="@+id/incButton"
        android:text="@string/counter_button_inc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/count_display"
        android:layout_centerHorizontal="true"
    />

</RelativeLayout>