<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:id="@+id/game_activity">

    <LinearLayout
        android:id="@+id/game_info_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/game_user_pretext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:text="@string/game_user_pretext"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_text_margin"
            android:layout_marginStart="@dimen/activity_text_margin"
            android:text="@string/game_current_user"
        />

        <TextView
            android:id="@+id/game_point_pretext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:text="@string/game_point_pretext"
        />

        <TextView
            android:id="@+id/game_current_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_text_margin"
            android:layout_marginStart="@dimen/activity_text_margin"
            android:text="@string/game_current_points"
        />

        <SeekBar
            android:id="@+id/game_zoom_level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:progress="2"
            android:max="4"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/game_mapView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/game_info_panel">

        <fragment
            android:id="@+id/game_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
        />

    </LinearLayout>

</RelativeLayout>