<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StartMenuActivity"
    android:id="@+id/startmenu_activity">


    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1">
    </View>

    <Button
        android:id="@+id/startmenu_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/startmenu_startbutton"
    />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1">
    </View>

    <Button
        android:id="@+id/startmenu_highscore_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/startmenu_highscorebutton"
    />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1">
    </View>

    <Button
        android:id="@+id/startmenu_options_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/startmenu_optionsbutton"
    />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1">
    </View>

    <Button
        android:id="@+id/startmenu_exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/startmenu_exitbutton"
    />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1">
    </View>

</LinearLayout>